# Amaro

./: .gitignore  README.md  form.html  package-lock.json
.github/workflows/: pages-deploy.yml
apps/web/: form_pagamento_semplice.html  nexi_pagamento_semplice.py  next.config.mjs  package-lock.json  package.json  pyproject.toml  replacement.txt  requirements.txt  tailwind.config.js
apps/web/app/: config.py  database.py  layout.js  main.py  models.py  nexi.py  not-found.js  page.js  seed.py
apps/web/app/blog/: page.js
apps/web/app/blog/[slug]/: page.js
apps/web/app/calendar/: page.js
apps/web/app/event/: page.js
apps/web/app/event/[slug]/: page.js
apps/web/app/gallery/: page.js
apps/web/app/principi/: page.js
apps/web/app/static/css/: styles.css
apps/web/app/strade/: page.js
apps/web/app/team/: page.js
apps/web/app/templates/: associazione.html  base.html  event_detail.html  gallery.html  home.html  member_area.html  membership.html  membership_payment.html  merch.html  merch_item.html  merch_payment.html  payment_result.html
apps/web/app/tesserati/: page.js
apps/web/components/: EventCard.js  Hero.js  RouteCard.js
apps/web/data/: events.json  posts.json  routes.json  team.json
apps/web/styles/: globals.css  theme.css
