[tool.poetry]
name = "amaro-site"
version = "0.1.0"
description = "Sito dell'associazione Amaro Sport e Cultura basato su FastAPI, Jinja2 e SQLite."
authors = ["Amaro <info@amaro.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
jinja2 = "^3.1.0"
sqlalchemy = "^2.0.0"
python-multipart = "^0.0.7"
pydantic = "^1.10"
requests = "^2.31"
itsdangerous = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.7"]
build-backend = "poetry.core.masonry.api"
